--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -85,11 +86,11 @@
             <h1>Web Developer</h1>
             <p>A software engineer specialised in creating amazing and responsive websites using WordPress, HTML, CSS, and JavaScript. With an experience of 2 years, we can make websites according to user requirements. Client satisfaction is our priority. Hire now for amazing services.</p>
             <div class="btn-container">
-                <a href="public/contact.html" class="btn">Hire Now</a>
+                <a href="contact.html" class="btn">Hire Now</a>
             </div>
         </div>
         <div class="pix">
-            <img class="mypic" src="../mypic3.jpeg" alt="Profile Picture">
+            <img class="mypic" src="mypic.jpeg" alt="Profile Picture">
         </div>
     </div>
 
